# isaac_humanoid

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: baseline_ppo.yaml  baseline_smoke.yaml  fair_ppo_baseline.yaml  fair_ppo_population.yaml  fair_ppo_population_smoke.yaml  fair_ppo_smoke.yaml  fair_sac_baseline.yaml  fair_sac_population.yaml  fair_sac_smoke.yaml  isaac_ppo_baseline.yaml  isaac_ppo_population.yaml  isaac_ppo_v1.yaml  isaac_ppo_v10.yaml  isaac_ppo_v11.yaml  isaac_ppo_v12.yaml  isaac_ppo_v13.yaml  isaac_ppo_v14.yaml  isaac_ppo_v15.yaml  isaac_ppo_v16.yaml  isaac_ppo_v17.yaml  isaac_ppo_v18.yaml  isaac_ppo_v2.yaml  isaac_ppo_v3.yaml  isaac_ppo_v4.yaml  isaac_ppo_v5.yaml  isaac_ppo_v6.yaml  isaac_ppo_v7.yaml  isaac_ppo_v8.yaml  isaac_ppo_v9.yaml  isaac_skrl_sac.yaml  isaac_skrl_td3.yaml  population_average.yaml  population_average_parameters.yaml  population_heavytail.yaml  population_heavytail_smoke.yaml  scaling_sweep.yaml
docs/: experiment_protocol.md  isaaclab_humanoid.md
outputs/: eval_dataset.csv  eval_summary.csv
runpod/: setup_isaaclab_runpod.sh  setup_runpod.sh  tmux_launch.sh  train_average_parameters_runpod.sh  train_average_runpod.sh  train_baseline_runpod.sh  train_heavytail_runpod.sh  train_ppo_baseline_runpod.sh  train_sac_baseline_runpod.sh
scripts/: analyze_results.py  build_milestone_table.py  collect_eval_dataset.py  evaluate.py  evaluate_fair.py  evaluate_isaac_fair.py  evaluate_isaac_ppo_average.py  evaluate_single.py  install_isaac_skrl_offpolicy.py  install_isaac_v4_task.py  (+18 more)
(+110 files in other folders)
